# ntfy_lite

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  404.html  AGENTS.md  GEMINI.md  LICENSE  README.md  index.html  objects.inv  pyproject.toml  search.json  sync_to_monorepo.md  zensical.yml
.github/: labels.yml
.github/workflows/: ci.yml  docs.yml  labels.yml  release.yml
.jules/: bolt.md
dll_etl/ntfy_lite/: actions.py  defaults.py  error.py  handler.py  ntfy.py  ntfy2logging.py  utils.py
docs/: installation.md  usage.md
examples/: demo_buffer.py  demo_logging.py  demo_push.py
installation/: index.html
limitation/: index.html
ntfy_lite/: __init__.py  actions.py  buffer.py  cli.py  config.py  defaults.py  demo_logging.py  demo_push.py  error.py  formatter.py  handler.py  ntfy.py  ntfy2logging.py  utils.py
references/: index.html
test/: test_ntfy_lite.py
tests/: test_actions.py  test_cli.py  test_error.py  test_formatter.py  test_ntfy_lite.py  test_utils.py
usage/: index.html
