[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

## #########
# PROJECT #
## #########
[project]
name = "ntfy_lite"
version = "2.0.1"
description = "minimalistic python API for sending ntfy notifications"
readme = "README.md"
license-files = [ "LICENSE" ]
authors = [
  { name = "Vincent Berenz", email = "vberenz@tuebingen.mpg.de" },
  { name = "Mathias Creemers", email = "mcreemers3@delhaize.be" }
]
requires-python = ">=3.10"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "requests>=2.28.2",
  "validators>=0.20.0",
  "typing-extensions>=4.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
buffer = [
  "pysqlite3",
]
dev = [
  "ntfy_lite[buffer,test,docs]",
  "basedpyright>0",
  "ruff>0",
  "zensical",
  "prek",
]
test = [
  "pytest>0",
]
docs = [
  "zensical",
  "mkdocstrings[python]",
  "pymdown-extensions",
]

[dependency-groups]
dev = [
  "ntfy_lite[dev]",
]

## #####
# TOOL #
## #####
[tool.hatch]
build.targets.wheel.packages = [ "ntfy_lite" ]

[tool.pyright]
venv = ".venv"
strict = [ "**/*.py" ]
pythonVersion = "3.10"
