[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

## #########
# PROJECT #
## #########
[project]
name = "ntfy-lite"
version = "2.0.4"
description = "minimalistic python API for sending ntfy notifications"
readme = "README.md"
license-files = [ "LICENSE" ]
authors = [
  { name = "Vincent Berenz", email = "vberenz@tuebingen.mpg.de" },
  { name = "Mathias Creemers", email = "mcreemers3@delhaize.be" }
]
requires-python = ">=3.10"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "requests>=2.28.2",
  "typing-extensions>=4; python_version<'3.11'",
]
optional-dependencies.buffer = [
  "pysqlite3",
]
optional-dependencies.dev = [
  "ntfy-lite[buffer,docs,test]",
  "prek",
  "ruff>0",
  "ty>0",
  "zensical",
]
optional-dependencies.docs = [
  "mkdocstrings[python]",
  "pymdown-extensions",
  "zensical",
]
optional-dependencies.test = [
  "pytest>0",
]
urls.Homepage = "https://github.com/MCRE-BE/ntfy_lite"
urls.Repository = "https://github.com/MCRE-BE/ntfy_lite"
scripts.ntfy-lite = "ntfy_lite.cli:main"
urlsDocumentation = "https://mcre-be.github.io/ntfy_lite/"

[dependency-groups]
dev = [
  "ntfy-lite[buffer,dev,docs,test]",
]

## #####
# TOOL #
## #####
[tool.hatch]
build.targets.wheel.packages = [ "ntfy_lite" ]

[tool.ty]
environment.root = [ "." ]
environment.python = "./.venv"
# Globally downgrade noisy rules to warnings to focus on hard errors
rules.invalid-argument-type = "warn"
rules.possibly-unresolved-reference = "warn"
rules.unresolved-import = "error"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v${version}"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
